# inventory-parser

./: Makefile  README.md  providers.tf  pyproject.toml
terraform/: groups.tf  hosts.tf  inventory.tf  output.tf  providers.tf  var.tf
